maestro_cli/job_configs/run_schuduler-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: test-ingress
  labels:
    group: maestro
spec:
  rules:
  - host: test-service2.nrp-nautilus.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-svc
            port:
              number: 3000
  tls:
  - hosts:
    - test-service2.nrp-nautilus.io
